[package]
name = "chat_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
log = "0.4.20"
simplelog = "0.12.1"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
whoami = "1.4.1"
